# rules_typescript

./: BUILD.bazel  DEVELOPING.md  README.md  WORKSPACE  empty.bzl  index.js  karma.conf.js  karma_web_test.bzl  package.bzl  package.json
.circleci/: bazel.rc  config.yml
devserver/: BUILD.bazel
devserver/concatjs/: BUILD.bazel
devserver/devserver/: BUILD.bazel
devserver/runfiles/: BUILD.bazel
examples/: BUILD.bazel
examples/app/: BUILD.bazel
examples/es5_output/: es5_output_test.sh
examples/protocol_buffers/: BUILD.bazel
examples/testing/: BUILD.bazel
internal/: BUILD.bazel  build_defs.bzl  defaults.bzl  package.json  ts_repositories.bzl
internal/common/: compilation.bzl  tsconfig.bzl
internal/concatjs/: BUILD  concatjs.go
internal/devserver/: BUILD  package.json  ts_devserver.bzl
internal/devserver/main/: BUILD  main.go
internal/e2e/: default_tsconfig_test.js
internal/e2e/npm_packages/: test.sh
internal/e2e/npm_packages/karma/: WORKSPACE
internal/e2e/npm_packages/karma_stack_trace/: WORKSPACE
internal/e2e/npm_packages/karma_typescript/: WORKSPACE
internal/e2e/package_karma/: WORKSPACE
internal/e2e/package_typescript_2.7/: WORKSPACE
internal/e2e/package_typescript_2.8/: WORKSPACE
internal/e2e/package_typescript_2.9/: WORKSPACE
internal/e2e/package_typescript_3.1/: WORKSPACE
internal/e2e/package_typescript_3.1_no_npm/: WORKSPACE
internal/e2e/package_typescript_karma/: WORKSPACE
internal/e2e/reference_types_directive/: BUILD.bazel
internal/e2e/ts_auto_deps/: WORKSPACE
internal/karma/: BUILD.bazel  README.md  browser_repositories.bzl  index.ts  karma.conf.js  karma_web_test.bzl  package.json  ts_web_test.bzl
internal/karma/docs/: install.md
internal/protobufjs/: ts_proto_library.bzl
internal/tsc_wrapped/: BUILD.bazel  compiler_host.ts  index.js  plugin_api.js  tsc_wrapped.ts  worker.ts
internal/tsetse/: language_service_plugin.ts
internal/tsetse/rules/: ban_promise_as_condition_rule.ts
tools/: check_version.js
