package(default_visibility = ["//visibility:public"])

exports_files([
    "test-main.js",
    "karma.conf.js",
    # Exported to be consumed for generating skydoc.
    "ts_web_test.bzl",
    "ts_web_test_suite.bzl",
])

load("//internal:defaults.bzl", "ts_library")

ts_library(
    name = "karma_concat_js",
    srcs = glob(["*.ts"]),
    module_name = "karma-concat-js",
    node_modules = "@build_bazel_rules_typescript_tsc_wrapped_deps//:node_modules",
    tsconfig = "//internal:tsconfig.json",
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "karma_bin",
    data = [
      "@npm//:jasmine-core",
      "@npm//:karma",
      "@npm//:karma-chrome-launcher",
      "@npm//:karma-firefox-launcher",
      "@npm//:karma-jasmine",
      "@npm//:karma-sauce-launcher",
      "@npm//:karma-sourcemap-loader",
      "@npm//:karma-requirejs",
      "@npm//:requirejs",
      "@npm//:tmp",
      ":karma_concat_js",
    ],
    entry_point = "karma/bin/karma",
)
